# vaccs_running

./: README.md  pyproject.toml  vaccs-running
.github/workflows/: ci.yml
tests/: test_main.py  test_slurm.py  test_ui.py
vaccs_running/: __main__.py  slurm.py  ui.py
