[project]
name = "vaccs-running"
version = "0.1.0"
description = "A colorful terminal job monitor for UVM VACC Slurm jobs."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
vaccs-running = "vaccs_running.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

